Enable new errorprone checks and fix violations (#3018)