@@ -26,6 +26,7 @@ import static google.registry.testing.FullFieldsTestEntityHelper.makeHistoryEntr
 import static google.registry.testing.FullFieldsTestEntityHelper.makeRegistrar;
 import static google.registry.testing.FullFieldsTestEntityHelper.makeRegistrarPocs;
 import static google.registry.testing.GsonSubject.assertAboutJson;
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableListMultimap;
@@ -523,7 +524,7 @@ class RdapDomainSearchActionTest extends RdapSearchActionTestCase<RdapDomainSear
         assertThat(linkToNext).isNotNull();
         int pos = linkToNext.indexOf("cursor=");
         assertThat(pos).isAtLeast(0);
-        cursor = URLDecoder.decode(linkToNext.substring(pos + 7), "UTF-8");
+        cursor = URLDecoder.decode(linkToNext.substring(pos + 7), UTF_8);
         JsonArray searchResults = results.getAsJsonArray("domainSearchResults");
         assertThat(searchResults).hasSize(action.rdapResultSetMaxSize);
         for (JsonElement item : searchResults) {
